--- a/contato.html
+++ b/contato.html
@@ -12,12 +12,13 @@
     <body>
         <header>
             <div class="caixa">
-                <h1><img src="imagens/logo.png" alt="Logo da barbearia Alura"></h1>
+                <h1><img src="imagens/logo.png"></h1>
 
                 <nav>
                     <ul>
                         <li><a href="index.html">Home</a></li>
                         <li><a href="produtos.html">O Acarotrat</a></li>
+                        <li><a href="bula.html"> Bula</a></li>
                         <li><a href="contato.html">Contato</a></li>
                     </ul>
                 </nav>
