--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                     <ul>
                         <li><a href="index.html">Home</a></li>
                         <li><a href="produtos.html">O Acarotrat</a></li>
+                        <li><a href="bula.html"> Bula</a></li>
                         <li><a href="contato.html">Contato</a></li>
                     </ul>
                 </nav>
@@ -36,10 +37,10 @@
 
                 <img class="utensilios" class="container" src="imagens/utensilios.png" alt="Utensilios de um barbeiro">
 
-                <p class= "sobre-o-produto" class="container">Nossa desparasitante, o <strong>Acarotrat</strong> contém ivermectina (450ug/pipeta) sendo eficaz contra ácaros. A recomendação de uso a cada 3 meses.
+                <p class= "sobre-o-produto" class="container">Nossa desparasitante, o <strong>Acarotrat</strong> contém ivermectina (450ug/pipeta) sendo eficaz contra ácaros. A recomendação de uso a cada 4 meses.
                 </p>
 
-                <br/><p class= "missao" class="container"><strong>Vantagens:</strong> O Acarotrat é um produto tópico, facilitando sua aplicação, além de proteger seu pet pelo período de 3 meses. Tudo isso por um preço que cabe no seu bolso!</p>
+                <br/><p class= "missao" class="container"><strong>Vantagens:</strong> O Acarotrat é um produto tópico, facilitando sua aplicação, além de proteger seu pet pelo período de 4 meses. Tudo isso por um preço que cabe no seu bolso!</p>
 
             </section>
 
