--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
             <section class="mapa">
                 <h3 class="titulo-principal">Nossa Indústria</h3>
-                <p>Nossa cede está localizada na Universidade mais bonita do mundo!</p>
+                <p>Nossa sede está localizada na Universidade mais bonita do mundo!</p>
 
                 <div class="mapa-conteudo">
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3678.8961521418146!2d-43.68727278441826!3d-22.769234885082035!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9955d8251e415f%3A0x613581ba0a2b68bd!2sUniversidade%20Federal%20Rural%20do%20Rio%20de%20Janeiro%20(UFRRJ)!5e0!3m2!1spt-BR!2sbr!4v1639095500339!5m2!1spt-BR!2sbr" width="1000" height="350" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
